--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -25,10 +25,10 @@ jobs:
         run: |
           go get -v -t -d ./...
 
-      - name: Intsall Golangci-lint
-          run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b . latest
-      - name: Lint
-          run: ./golangci-lint run ./...
+      - name: golangci-lint
+          uses: golangci/golangci-lint-action@v2
+          with:
+            version: v1.29
 
       - name: Test
         run: go test -v .
