--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -2,12 +2,11 @@ name: Go
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -16,8 +15,10 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ^1.15
+
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
+
       - name: Get dependencies
         run: |
           go get -v -t -d ./...
